fix source files

--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -1,41 +1,38 @@
-* xref:index.adoc[Introduction]
-* xref:00_introductions.adoc[Agenda & Instructors]
+* xref:00_introductions.adoc[Introductions]
+* xref:01_welcome.adoc[Welcome]
 
-* xref:module-00.adoc[1. Virtual Machine Management ]
-** xref:module-00.adoc#create_project[Create a New Project]
-** xref:module-00.adoc#create_vm[Create a Linux Virtual Machine]
-** xref:module-00.adoc#admin_vms[Administering Virtual Machines]
-** xref:module-00.adoc#vm_state[Controlling Virtual Machine State]
-** xref:module-00.adoc#live_migrate[Live Migrate a Virtual Machine]
+* Modules
 
-* xref:module-01.adoc[2. Bare Metal Management ]
-** xref:module-01.adoc#review_nodes[Review Nodes and Machines]
-** xref:module-01.adoc#review_hosts[Review Bare Metal Hosts]
-** xref:module-01.adoc#scaling_cluster[Scaling the Cluster with a New Bare Metal Host]
+** xref:module-01.adoc[Baremetal VM Management and OpenShift Virtualization Requirements]
+** xref:08_bare_metal.adoc[Module Lab: Bare Metal OpenShift Overview]
+** xref:module-00.adoc[Virtual Machine Management]
+** xref:03_ocpv_basics.adoc[Module Lab: OpenShift Virtualization Basics]
+** xref:module-05.adoc[Migrating Virtual Machines]
+** xref:02_migrate_vms.adoc[Module Lab: Migrating Virtual Machines]
+** xref:module-04.adoc[Introduction to Virtual Machine Customization]
+** xref:05_ocpv_customization.adoc[Module Lab: Customize Virtual Machines]
+** xref:06_windows_vm.adoc[Module Lab: Windows Virtual Machines]
+** xref:module-03.adoc[Network Management]
+** xref:09_network_management.adoc[Module Lab: Network Management]
+** xref:module-02.adoc[Storage Management]
+** xref:10_storage_management.adoc[Module Lab: Storage Management]
+** xref:15_backup_restore.adoc[Module Lab: Backup and Restore]
+** xref:19_service_route.adoc[Module Lab: Exposing apps using a Route]
+** xref:07_vm_management.adoc[Module Lab: Virtual Machine Management]
+** xref:20_metallb.adoc[Module Lab: Exposing apps using MetalLB]
+** xref:04a_DO316.adoc[Module Lab: DO316 Sections 7 and 8]
+** xref:17_trilio_backup.adoc[Module Lab: Trilo Backup and Recovery Lab]
 
-* xref:module-02.adoc[3. Storage Management]
-** xref:module-02.adoc#examine_pvc[Examine the PVC for a VM]
-** xref:module-02.adoc#managing_snapshots[Managing Snapshots]
-** xref:module-02.adoc#clone_vm[Clone a Virtual Machine]
 
-* xref:module-03.adoc[4. Network Management]
-** xref:module-03.adoc#create_netattach[Create a Network Attachment Definition]
-** xref:module-03.adoc#connect_external_net[Connect a Virtual Machine to an External Network]
-** xref:module-03.adoc#multinetwork_policy[Using a Multinetwork Policy]
+* xref:04_thanks.adoc[Thank you and next steps]
 
-* xref:module-04.adoc[5. Template Management]
-** xref:module-04.adoc#clone_customize_template[Clone and Customize a Template]
-** xref:module-04.adoc#create_win[Create a Windows VM Template]
+* Modules Extras
 
-* xref:module-05.adoc[6. Migrating Virtual Machines]
-** xref:module-05.adoc#prerequisites[Prerequisites for Migrations]
-** xref:module-05.adoc#migrating_vms[Migrating Virtual Machines from VMware]
+** xref:23_ROSAVirt.adoc[Module: ROSA OCP Virt lab]
+** xref:22_disconnected.adoc[Module: Disconnected Environments]
+** xref:24_presales.adoc[Module: Pre Sales]
+** xref:25_virtualization_gitops.adoc[Module: GitOps + CI/CD lab]
+* xref:26_Closeout.adoc[Closeout]
 
-* Additional Boot Camp Content
-** xref:22_disconnected.adoc[Disconnected Environments]
-** xref:19_service_route.adoc[Using a Service and Route to expose an application]
-** xref:20_metallb.adoc[MetalLB concepts]
-** xref:04a_DO316.adoc[Additional Labs from DO316 Chapters 7 & 8]
-** xref:17_trilio_backup.adoc[Trilio Lab]
-** xref:24_presales.adoc[Pre Sales, Discovery Sessions, and Virtualization Assessments]
+* xref:27_steps_to_disable_os_images.adoc[Appendix: Steps to disable OS images]
 
