--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -5,11 +5,9 @@
 * Modules
 
 ** xref:module-01.adoc[Baremetal VM Management and OpenShift Virtualization Requirements]
-** xref:08_bare_metal.adoc[Module Lab: Bare Metal OpenShift Overview]
 ** xref:module-00.adoc[Virtual Machine Management]
 ** xref:03_ocpv_basics.adoc[Module Lab: OpenShift Virtualization Basics]
 ** xref:module-05.adoc[Migrating Virtual Machines]
-** xref:02_migrate_vms.adoc[Module Lab: Migrating Virtual Machines]
 ** xref:module-04.adoc[Introduction to Virtual Machine Customization]
 ** xref:05_ocpv_customization.adoc[Module Lab: Customize Virtual Machines]
 ** xref:06_windows_vm.adoc[Module Lab: Windows Virtual Machines]
@@ -34,6 +32,11 @@
 ** xref:24_presales.adoc[Module: Pre Sales]
 ** xref:25_virtualization_gitops.adoc[Module: GitOps + CI/CD lab]
 * xref:26_Closeout.adoc[Closeout]
+
+* Old Labs
+
+** xref:02_migrate_vms.adoc[Module Lab: Migrating Virtual Machines]
+** xref:08_bare_metal.adoc[Module Lab: Bare Metal OpenShift Overview]
 
 * xref:27_steps_to_disable_os_images.adoc[Appendix: Steps to disable OS images]
 
