--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -38,5 +38,7 @@
 ** xref:02_migrate_vms.adoc[Module Lab: Migrating Virtual Machines]
 ** xref:08_bare_metal.adoc[Module Lab: Bare Metal OpenShift Overview]
 
-* xref:27_steps_to_disable_os_images.adoc[Appendix: Steps to disable OS images]
+* Appendix
+
+** xref:27_steps_to_disable_os_images.adoc[Appendix: Steps to disable OS images]
 
