--- a/content/modules/ROOT/pages/22_disconnected.adoc
+++ b/content/modules/ROOT/pages/22_disconnected.adoc
@@ -15,7 +15,7 @@ This lab will introduce you to the basics of deploying and managing OpenShift Vi
 
 == Create a Local Registry
 
-Login to the bastion `ssh -o PreferredAuthentications=password lab-user@hypervisor.xxxxx.dynamic.redhatworkshops.io` as listed in the Showroom.
+Login to the bastion host as listed in the Showroom.
 
 Ensure Podman is installed in your bastion: 
 
@@ -28,7 +28,7 @@ Create a simple local registry using the createRegistry.sh script:
 
 [source,bash]
 ----
-$ cat << EOF > createRegistry.sh
+$ cat << 'EOF' > createRegistry.sh
 #!/bin/env bash
 # set -xe
 
