--- a/content/modules/ROOT/pages/22_disconnected.adoc
+++ b/content/modules/ROOT/pages/22_disconnected.adoc
@@ -15,7 +15,9 @@ This lab will introduce you to the basics of deploying and managing OpenShift Vi
 
 == Create a Local Registry
 
-Login to the bastion host as listed in the Showroom.
+**Login to the bastion host as listed in the Showroom.**
+
+**All exercises in this module should take place on the BASTION host NOT the hypervisor.  Please ensure you are logged in to the bastion host defined earlier in the class!**
 
 Ensure Podman is installed in your bastion: 
 
