--- a/content/modules/ROOT/pages/26_Closeout.adoc
+++ b/content/modules/ROOT/pages/26_Closeout.adoc
@@ -2,14 +2,16 @@
 
 == We hope that you found this bootcamp to be informative and educational
 
-link:https://docs.google.com/forms/d/e/1FAIpQLSdyjoCwnS9AGPAGU5CXJNaoIMa7RGz6LW4ZcxBNEEoIszgnYg/viewform[Survey]
+link:https://docs.google.com/forms/d/e/1FAIpQLSd6LlAXh2ogLXLsvW-t5gwktvQyOEKW0MgO0C7cA6TxrTAZ-A/viewform?usp=sf_link[Survey]
 
 == Take your EX316!
 
 == Please feel free to reach out any time! 
 
--Mike
+-Andrew
 
--Tom
+-Scott
 
--Kevin
+-Brian
+
+-Freddy
