Added Chris & Maciej

--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -51,6 +51,16 @@ image::introductions/ds.png[]
 * Darin Sorrentino
 * Principal Specialist Solution Architect, NA HQ Virt Team
 
+image::introductions/cj.png[]
+
+* Chris Janiszewski
+* Senior Principal Specialist Solution Architect, NA HQ Virt Team
+
+image::introductions/ml.png[]
+
+* Maciej Lecki
+* Senior Specialist Solution Architect, NA HQ Virt Team
+
 
 == Class Introductions
 
